# pypp

./: DOCS.md  README.md  pypp_autoload.pth  pyproject.toml  tox.ini
examples/: gs.h  gs.py  indent_abolition.py  rusty.h  rusty.py
pypp/: __init__.py  _codec.py
